Large content update

--- a/source/greenrope.html.erb
+++ b/source/greenrope.html.erb
@@ -20,8 +20,25 @@ title: GreenRope Project
                 <li><span style="font-weight: 700;">Being conscious of providing a fresh feel without creating a jarring experience between features.</span> As tempting as it was to implement a bold design, I had to be conscious of not falling into the same habits I was trying to eliminate.</li>
             </ul>
         </p>
+    </div>
+    <div class="text-block">
         <h2>Deep Dive: Dashboard</h2>
         <p>I felt an appropriate area to begin our design update was our dashboard. Like most dashboards, the main focus was to aggregate and provide the user the necessary data overview. Seeing as this is the first landing point for all users, I wanted this area to set the standard and tone for the rest of the UI.</p>
+        <p>Let's first take a look at the original dashboard:</p>
+    </div>
+
+    <div style="text-align:center">
+        <img style="max-width: 650px;" alt="Old Greenrope Dashboard" src="/images/greenrope/old-dashboard.png">
+    </div>
+
+    <div class="text-block">
+        <p>As you can see it was in need of an overhaul. A few of the issues I had with layout were:
+            <ul>
+                <li>The widgets took up too much space. When you have an average widget count of between 5-10, this led to the user having to constantly scroll up and down the page.</li>
+                <li>Having the account section on the right hand side violated the natural expection of processing information from left-to-right.</li>
+                <li>The account section also felt cluttered. I felt the space could be better organized and compartmentalized for more efficient use.</li> 
+            </ul>
+        </p> 
         <h3>UX Process | Audit</h3>
         <p>During our review of the current dashboard, I first cross referenced any feature request tickets we had to give myself a more wholesome foundation to approach the redesign. After taking those requests into consideration, I then began to create a few user personas to best understand the wants and needs of our user base. After reviewing with my CEO, we categorized the majority of our users in two sections:
             <ul>
@@ -122,6 +139,16 @@ title: GreenRope Project
         <img alt="Old Mobile UI" src="/images/greenrope/old-mobile.jpg">
         <figcaption>Left: Main Navigation / Dashboard. Right: Example of a contact record</figcaption>
     </div>
+
+    <!-- Mobile UI Sketches -->
+    <div>
+        <img alt="Mobile Sketch 1" src="/images/greenrope/mobile-sketch-1.png"> 
+        <figcaption>First set of mobile sketches</figcaption>
+        <img alt="Mobile Sketch 2" src="/images/greenrope/mobile-sketch-2.png">
+        <figcaption>Second set of mobile sketches</figcaption>
+    </div> 
+
+
 
     <div class="text-block">
         <h3>New UI: Contact Record Use Case</h3>
