--- a/source/sailorsgrave.html.erb
+++ b/source/sailorsgrave.html.erb
@@ -9,10 +9,10 @@ title: Sailors Grave Project
 <div class="project-content">
     <!-- Text Block -->
     <div class="text-block">
-        <p><span style="font-weight: 700;">Position:</span> UX Designer | <span style="font-weight: 700;">Team:</span> Shop Owner, Product Designer</p>
-        <h3>Project Overview</h3>
-        <p>This project was my final assignment at UCSD within the HCI (Human Computer Interaction) department. The goal of the project was to reach out to a local business and offer to completely redesign their existing website. The scope of the project was to soley focus on the redesign, not the developement of the site. We could offer that, but only once the project was finished.</p>
-        <p>I chose to reach out to Sailors Grave Tattoo Gallery since I had just gotten a tattoo from them. Seeing as tattooing is inherently design centric, I figured it would be a unique project to combine tattooing and web design. They were enthusiastically receptive and were a fantastic business to work with.
+        <p><span style="font-weight: 700;">Position:</span> UI/UX Designer | <span style="font-weight: 700;">Team:</span> Shop Owner, UI/UX Designer</p>
+        <h2>Project Overview</h2>
+        <p>This case study was my final assignment at UCSD within the HCI (Human Computer Interaction) department. The goal of the case study was to reach out to a local business and offer to completely redesign their existing website and user experience flow. The scope of the project was only to solely focus on the design, not the development of the site. </p>
+        <p>Seeing as tattooing is inherently design centric, I figured it would be a unique project to combine tattooing and web design. They were enthusiastically receptive and were a fantastic business to work with.
         </p>
         <h3>UX Process</h3>
         <p>Before beginning my design I wanted to first interview the shop owner to set a foundation for his expectation of the site redesign. I categorized the interview into several sections:
