--- a/source/partials/_sgtg-item.erb
+++ b/source/partials/_sgtg-item.erb
@@ -1,7 +1,7 @@
 <section class="section-padding">
     <div class="dash-item">
         <a href="/sailorsgrave">
-            <img alt="SGTG Graphic" src="/images/sgtg/sgtg-main.png">
+            <img alt="SGTG Graphic" src="/images/sgtg/sgtg-main-2.png">
         </a>
     </div>
 </section>
