Greenrope content and image update

--- a/source/greenrope.html.erb
+++ b/source/greenrope.html.erb
@@ -80,7 +80,7 @@ title: GreenRope Project
     </div>
 
     <div>
-        <img alt="Greenrope Navigation Update" src="/images/greenrope/gr-nav.png">
+        <img alt="Greenrope Navigation Update" src="/images/greenrope/gr-nav-comparison.png">
         <figcaption>Old Navigation vs. New Navigation</figcaption>
     </div>
 
@@ -89,7 +89,7 @@ title: GreenRope Project
     </div>
 
     <div>
-        <img alt="Greenrope Newsfeed" src="/images/greenrope/newsfeed.png">
+        <img alt="Greenrope Newsfeed" src="/images/greenrope/gr-todo-list.png">
         <figcaption>Example of the ToDo list widget design update</figcaption>
     </div>
 
@@ -140,6 +140,10 @@ title: GreenRope Project
         <figcaption>Left: Main Navigation / Dashboard. Right: Example of a contact record</figcaption>
     </div>
 
+    <div class="text-block">
+        <p>I first began by sketching some of my initial ideas with the intention of creating a more efficient and effective way of accessing the large amount of data and information.</p>
+    </div>
+
     <!-- Mobile UI Sketches -->
     <div>
         <img alt="Mobile Sketch 1" src="/images/greenrope/mobile-sketch-1.png"> 
@@ -148,11 +152,9 @@ title: GreenRope Project
         <figcaption>Second set of mobile sketches</figcaption>
     </div> 
 
-
-
     <div class="text-block">
-        <h3>New UI: Contact Record Use Case</h3>
-        <p>In addition to updating the design of the app, I wanted to make sure the user knew where they were at all times. I used a combination of hierarchical and flat type navigation to give the user a straightforward and simple approach to moving throughout the app. For example, within the contact record use case below, the user is able to navigate to a specific contact hierarchically. Once they are within that particular contact record, the user is then directed to use the flat sub navigation to interact with the various categories. I found this approach to be the most effective when having to deal with the amount of data we display at any given point in the app.</p>
+        <h3>New UI</h3>
+        <p>In addition to updating the overall design of the app, I wanted to make sure the user knew where they were at all times. I used a combination of hierarchical and flat type navigation to give the user a straightforward and simple approach to moving throughout the app. For example, within the contact record use case below, the user is able to navigate to a specific contact hierarchically. Once they are within that particular contact record, the user is then directed to use the flat sub navigation to interact with the various categories. I found this approach to be the most effective when having to deal with the amount of data we display at any given point in the app.</p>
     </div>
 
     <!-- Mobile Images -->
