Updated homepage layout and consolidated css

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,8 +5,4 @@ title: Nicholas Bokaie's Portfolio
   <h1>Product Designer | Bay Area</h1>
 </div>
 
-<%= partial 'partials/gr-item' %>
-
-<%= partial 'partials/ziprent-item' %>
-
-<%= partial 'partials/sgtg-item' %>
+<%= partial 'partials/main-home' %>
