--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -154,7 +154,7 @@ nav {
 		left: 0; 
 		z-index: -1;
 		width: $nav-width-mobile;
-		background-image: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
+		background: $nav-background-green;
 		content: '';
 		transform: skewX(15deg) translateX(-100%);
 		transform-origin: bottom left;
@@ -300,6 +300,48 @@ main {
 	a {
 		color: inherit;
 		text-decoration: none;
+	}
+}
+
+// Main Homepage CSS
+.main-home {
+	padding: 2% 6% 0;
+	
+	.lg-col {
+		margin-bottom: 2%;
+		img {
+			width: 100%;
+		}
+	}
+
+	.two-col-container {
+		div{
+			flex: 1;
+			img {
+				width:100%;
+			}
+		}
+		@include for-size(phone-only){
+			div{
+				margin-bottom: 2%;
+			}
+		}
+		@include for-size(tablet-landscape-up) {
+			flex-direction: column;
+			div {
+				margin-bottom: 2%;
+			}
+		}
+
+		@include for-size(desktop-up) {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+
+		.col-1{
+			margin-right: 1%;
+		}
+	}
 	}
 }
 
@@ -469,4 +511,3 @@ footer {
     }
   }
 }
-
