fixed spelling error

--- a/source/customer-io-cover-letter.html.erb
+++ b/source/customer-io-cover-letter.html.erb
@@ -21,7 +21,7 @@ Title: Customer IO Cover Letter
 
         <p>Given my past experience with both design and development, I believe I would be a valuable candidate to contribute to the Customer.io platform. I am extremely comfortable working in a remote position and love working with people who are passionate and enthusiastic about what they do.</p>
 
-        <p>Thank you for your considersation!</p>
+        <p>Thank you for your consideration!</p>
         <div style="width:100%;height:0;padding-bottom:67%;position:relative;"><iframe src="https://giphy.com/embed/ui1hpJSyBDWlG" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
     </div>
 </div>
