--- a/source/greenrope.html.erb
+++ b/source/greenrope.html.erb
@@ -1,16 +1,17 @@
 ---
 title: GreenRope Project
 ---
+<!--
 <div class="img-container gr-content-img">
     <div>
         <h1>GreenRope</h1>
     </div>
 </div>
+-->
 <div class="project-content">
-    
     <div class="text-block">
+        <h1>Project Overview</h1>
         <p><span style="font-weight: 700;">Position:</span> Product Designer | <span style="font-weight: 700;">Team:</span> CEO, COO, CTO, Product Designer</p>
-        <h2>Project Overview</h2>
         <p>During my time at GreenRope, my primary focus was addressing design consistency throughout the platform. When moving through the platform, there was a disconnect between feature areas which would lead to user frustrations. The main objective was to identify the various differences from feature to feature and implement a new design to eliminate any disjunction.</p>
         <h2>Challenges</h2>
         <p>Due to a limited development staff, we didn’t have the resources to roll out a global styling update. We had to approach our design refresh feature by feature. This decision led to several challenges:
@@ -20,8 +21,6 @@ title: GreenRope Project
                 <li><span style="font-weight: 700;">Being conscious of providing a fresh feel without creating a jarring experience between features.</span> As tempting as it was to implement a bold design, I had to be conscious of not falling into the same habits I was trying to eliminate.</li>
             </ul>
         </p>
-    </div>
-    <div class="text-block">
         <h2>Deep Dive: Dashboard</h2>
         <p>I felt an appropriate area to begin our design update was our dashboard. Like most dashboards, the main focus was to aggregate and provide the user the necessary data overview. Seeing as this is the first landing point for all users, I wanted this area to set the standard and tone for the rest of the UI.</p>
         <p>Let's first take a look at the original dashboard:</p>
@@ -109,12 +108,12 @@ title: GreenRope Project
         <h3>Additional Examples</h3>
         <p>Instead of walking through the other design updates, feel free to take a look at some of the rapid prototypes I created. I found it helped speed along the deployment of our updates if I wrote the HTML/CSS skeleton for the feature. I would then hand that over to one of our developers and we would work together to polish the design with all of the necessary data plugged into it. Keep in mind these are not the final product, but they are a good representation of the direction we ended up going.</p>
         <div class="codepen-examples">
-            <button class="primary-btn">
+            <button class="btn-small btn-primary">
                 <a href="https://codepen.io/nickbokaie/pen/zpPvLB" target="_blank">Example 1</a></button>
-            <button class="primary-btn">
+            <button class="btn-small btn-primary">
                 <a href="https://codepen.io/nickbokaie/pen/rpYepQ" target="_blank">Example 2</a>
             </button>
-            <button class="primary-btn">
+            <button class="btn-small btn-primary">
                 <a href="https://codepen.io/nickbokaie/pen/MrOyzz" target="_blank">Example 3</a>
             </button>
         </div>
@@ -143,7 +142,7 @@ title: GreenRope Project
 
     <!-- Old Mobile UI -->
     <div>
-        <img alt="Old Mobile UI" src="/images/greenrope/old-mobile.jpg">
+        <img alt="Old Mobile UI" src="/images/greenrope/old-mobile.png">
         <figcaption>Left: Main Navigation / Dashboard. Right: Example of a contact record</figcaption>
     </div>
 
