fixed image path

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -3,7 +3,7 @@ title: About
 ---
 <div class="about about-img">
     <h1>Hey There!</h1>
-    <img class="img-reveal" alt="Nick profile picture" src="images/penelope.jpg">
+    <img class="img-reveal" alt="Nick profile picture" src="/images/penelope.jpg">
 </div>
 
 <div class="project-content">
